[package]
name = "rust_playground"
version = "0.1.0"
authors = ["AlexShan2008 alex.shantong@gmail.com"]
description = "A place to experiment with Rust code, explore new concepts, and develop my Rust programming skills."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
rand = "0.8.5"
